--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://sciviscontest2023.github.io/'
 languageCode = 'en-us'
 title = 'IEEE SciVis Contest 2023'
 theme = "hugo-tanka"
