--- a/config.toml
+++ b/config.toml
@@ -1,48 +1,68 @@
 baseURL = 'https://sciviscontest2023.github.io/'
 languageCode = 'en-us'
 title = 'IEEE SciVis Contest 2023'
-theme = "hugo-tanka"
-canonifyurls = true
+theme = "hugo-whisper-theme"
 
-enableEmoji = true
-hasCJKLanguage = false
+pygmentsCodeFences = true
+pygmentsCodefencesGuessSyntax = true
+pygmentsUseClasses = true
 
-pygmentsstyle = "vs"
-pygmentscodefences = true
+[module]
+  [module.hugoVersion]
+    extended = true
+    min = "0.55.0"
 
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+# Controls how many words are printed in the content summary on the docs homepage.
+# See https://gohugo.io/content-management/summaries/
+summaryLength = 30
 
-[params]
-  sitename = "IEEE SciVis Contest 2023"
-  faviconfile = "images/favicon.png"
-  highlightjs = true
-  highlightjslanguages = ["r", "python", "stan"]
-  uselatex = true
-  progressively = false
-# commentsrepo = "user/repo"
-
-[markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
-
-[[menu.primary]]
+[[menu.main]]
     name = "Home"
     url = "/"
     weight = 1
-[[menu.primary]]
-    name = "About"
-    url = "/about/"
+
+[[menu.main]]
+    name = "Data"
+    url = "/data/"
     weight = 2
-[[menu.primary]]
-    name = "GitHub"
-    url = "https://github.com/nanxstats"
+
+[[menu.main]]
+    name = "Submission"
+    url = "/submission/"
     weight = 3
-[[menu.primary]]
-    name = "Twitter"
-    url = "https://twitter.com/nanxstats"
+
+[[menu.main]]
+    name = "Google Group"
+    url = "https://groups.google.com/g/scivis2022"
     weight = 4
-[[menu.primary]]
-    name = "Subscribe"
-    url = "/index.xml"
+
+[[menu.main]]
+    name = "Past SciVis Contests"
+    url = "/past/"
     weight = 5
+
+[params]
+  google_analytics_id=""
+  homepage_button_link = '/data'
+  homepage_button_text = 'Download the Data'
+  homepage_intro = 'This is a test'
+  homepage_image = '/images/terminal.gif'
+  mainSections = ["data", "submission", "past"]
+
+  ## You can enable to add anchor links to header elements
+  # enable_anchor_link = true
+
+  [params.homepage_meta_tags]
+    meta_description = "IEEE SciVis Contest 2023"
+    meta_og_title = "IEEE SciVis Contest 2023"
+    meta_og_type = "website"
+    meta_og_url = "https://sciviscontest2023.github.io/"
+    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png"
+    meta_og_description = "IEEE SciVis Contest 2023"
+    meta_twitter_card = "summary"
+    meta_twitter_site = "@ieeevis"
+    meta_twitter_creator = "@ieeevis"
+
+  [params.logo]
+      mobile = "/images/logo-mobile.svg"
+      standard  = "/images/logo.svg"
