Changed meta image

--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ summaryLength = 30
     meta_og_title = "2023 IEEE SciVis Contest"
     meta_og_type = "website"
     meta_og_url = "https://sciviscontest2023.github.io/"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png"
+    meta_og_image = "/images/brain.png"
     meta_og_description = "IEEE SciVis Contest 2023"
     meta_twitter_card = "summary"
     meta_twitter_site = "@ieeevis"
